Refactoring and docs update
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>